<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="frg_home_btn_spotify_streamer">Spotify Streamer</string>
    <string name="frg_home_btn_super_duo">Super Duo</string>
    <string name="frg_home_btn_build_it_bigger">Build It Bigger</string>
    <string name="frg_home_btn_sxyz_reader">SXYZ Reader</string>
    <string name="frg_home_btn_capstone">Capstone</string>
    <string name="frg_home_btn_capstone_my_own_app">CAPSTONE: MY OWN APP</string>
    <string name="frg_home_tv_my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="message_to_show">This button will launch my %1$s app!</string>
</resources>
